# CMakeExampleForMicrosoft

./: CMakeLists.txt  README.md
CMakeExample/: CMakeExample.cpp  CMakeExample.h  CMakeLists.txt
CMakeExample/Subfolder2/: CMakeLists.txt  Subcode.hpp
